--- a/src/global.css
+++ b/src/global.css
@@ -1,10 +1,23 @@
-html {
-  height: 100%;
-}
-
 body {
-  display: flex;
-  flex-direction: column;
+  height: 100vh;
+
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+#root {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 3em;
+  height: 200px;
+  margin-top: auto;
+  box-shadow: 0px -0.5rem 1rem rgba(50, 50, 50, 0.15);
 }
