--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -31,7 +31,15 @@
   height: 100%;
   width: 100%;
   min-width: 325px;
-  position: relative;
+}
+
+.title {
+  width: 100%;
+  flex: 1;
+}
+
+.title p {
+  color: gray;
 }
 
 .card-container-body .title {
@@ -41,6 +49,9 @@
 
 .tags-container {
   width: 100%;
+  display: flex;
+  align-items: center;
+  flex: 1;
 }
 
 .card-container-body .tags-container ul {
@@ -67,6 +78,7 @@
   width: 100%;
   height: 100%;
   flex: 1;
+  position: relative;
 }
 
 .spinner-container {
@@ -96,14 +108,47 @@
   color: blue;
 }
 
+.main-right-side-container {
+  width: 20%;
+  margin-right: 0.5em;
+  padding: 0;
+}
+
+.right-side-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 1em;
+  gap: 10px;
+}
+
+.right-side-container-header img {
+  width: 100px;
+  height: 100px;
+  border: 1px solid blue;
+  border-radius: 50%;
+}
+
+.right-side-container-log-btn {
+  width: 100%;
+}
+
+.right-side-container-log-btn button {
+  width: 100%;
+}
+
 @media (max-width: 576px) {
   .card-container {
     flex-direction: column;
   }
 
-  .card-container-body h3,
-  .card-container-body h5 {
-    align-self: center;
+  .title p {
+    text-align: center;
+  }
+
+  .title h3 {
+    text-align: center;
   }
 
   .card-container-body .tags-container ul {
@@ -113,5 +158,9 @@
   .card-container-footer {
     flex-direction: row;
     gap: 10px;
+  }
+
+  .tags-container {
+    justify-content: center;
   }
 }
